# LightningJukeboxBot

./: .pre-commit-config.yaml  API.md  README.md  pyproject.toml  settings.yaml
docs/design/: index.md  jukebox.md  messages.md  player.md
lightning_jukebox_bot/: __main__.py  app.py
lightning_jukebox_bot/api/: routes.py
lightning_jukebox_bot/api/jukebox/: routes.py
lightning_jukebox_bot/api/jukebox/web/: routes.py
lightning_jukebox_bot/api/spotify/: routes.py
lightning_jukebox_bot/application/invoicing/: helper.py
lightning_jukebox_bot/application/lnbits/: __init__.py
lightning_jukebox_bot/application/redis/: __init__.py
lightning_jukebox_bot/application/spotify/: helper.py
lightning_jukebox_bot/application/stats/: helper.py
lightning_jukebox_bot/application/telegram/: __init__.py  application.py  bot_cmds.py  commands.py  helper.py  messages.py  util.py
lightning_jukebox_bot/application/users/: __init__.py  helper.py
lightning_jukebox_bot/settings/: __init__.py  const.py  schema.py
lightning_jukebox_bot/ui/static/css/: default.css
lightning_jukebox_bot/ui/static/js/jukebox/: fund.js  invoice.js
lightning_jukebox_bot/ui/static/js/jukebox/web/: index.js
lightning_jukebox_bot/ui/templates/: __init__.py  base.html.jinja
lightning_jukebox_bot/ui/templates/jukebox/: fund.html.jinja  payinvoice.html.jinja
lightning_jukebox_bot/ui/templates/jukebox/web/: index.html.jinja
lightning_jukebox_bot/ui/templates/spotify/: success.html.jinja
src/: jukeboxbot.py  jukeboxtexts.py  pyproject.toml  settings.py
