[tool.poetry]
name = "lightning-jukebox-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.112.2"
redis = "^5.0.8"
spotipy = "^2.24.0"
qrcode = "^7.4.2"
python-telegram-bot = "^21.4"
pydantic-settings = "^2.4.0"
uvicorn = "^0.30.6"
pyaml = "^24.7.0"
jinja2 = "^3.1.4"
aiomqtt = "^2.3.0"
pillow = "^10.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 120
